Self_Paced_Exercices/Traffic_Management/Configuring_Ingress_and_Egress_Traffic/_DOESNT_WORK_Gateway_HTTPS_HTTPS_Backend/answer/VirtualService.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: https-helloworld
spec:
  gateways:
  - "istio-ingress/generic"
  hosts:
  - "*"
  #- "lb.net"
  http:
  - name: "https"
    #match:
    #- port: 443
    route:
    - destination:
        host: helloworld.default.svc.cluster.local
        port:
          number:  443
        subset: https
